--- a/index.html
+++ b/index.html
@@ -1,10 +1,153 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
-  </head>
-  <body></body>
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Оно тебе надо</title>
+	<link rel="stylesheet" href="./fonts/fonts.css">
+	<link rel="stylesheet" href="./styles/global.css">
+	<link rel="stylesheet" href="./styles/style.css">
+</head>
+
+<body>
+	<header class="header">
+		<nav class="header__menu">
+			<ul class="header__links-list">
+				<li class="header__links-list-item header__links-list-item_no-bullit">
+					<a href="#0" class="header__link header__link_active">Главная</a>
+				</li>
+				<li class="header__links-list-item">
+					<a href="#0" class="header__link">Посмотреть лоты</a>
+				</li>
+				<li class="header__links-list-item">
+					<a href="#0" class="header__link">Об аукционе</a>
+				</li>
+			</ul>
+		</nav>
+
+		<div class="header__logo">
+			<a href="#0">
+				<img src="./images/logo.svg" alt="Логотип" class="header__logo-image">
+			</a>
+		</div>
+
+		<address class="address header__address">
+			<a href="tel:+99995555555" class="header__link">+9 999 555 5555</a>
+			<a href="mailto:info@sobaka.ge" class="header__link">info@sobaka.ge</a>
+			<p>наб. Принсенграхт 263-265, Амстердам</p>
+		</address>
+	</header>
+
+	<main>
+		<div class="cover">
+			<div class="overlay"></div>
+
+				<h1 class="cover__title">
+					<span class="aligned-text">О<span class="letter-spacing-extended">н<span class="no-letter-spacing">о</span></span></span> 
+					<span class="aligned-text_center">те<span class="letter-spacing-extended">б<span class="no-letter-spacing">е</span></span></span> 
+					<span class="aligned-text_right">н<span class="letter-spacing-extended">ад</span><span class="no-letter-spacing">о</span></span>
+				</h1>
+
+			<div class="cover__description">
+				<h3 class="cover__description-text">Аукцион вещей, в которые никто не верил</h3>
+				<button class="bet-button">Сделать ставку</button>
+			</div>
+
+		</div>
+
+		<article class="lots">
+			<h2 class="lots__heading">Лоты</h2>
+				<ul class="lots__card-list">
+					<li class="lots__card-list-item">
+						<a href="#0" class="card-link">
+							<div class="card card_type_film">
+								<div class="overlay"></div>
+								<h3 class="card__title">Фильм режиссёра, который бросил киношколу</h3>
+								<p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
+							</div>
+						</a>
+					</li>
+
+					<li class="lots__card-list-item">
+						<a href="#0" class="card-link">
+							<div class="card card_type_book">
+								<div class="overlay"></div>
+								<h3 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h3>
+								<p class="card__text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
+							</div>
+						</a>
+					</li>
+
+					<li class="lots__card-list-item">
+						<a href="#0" class="card-link">
+							<div class="card card_type_picture">
+								<div class="overlay"></div>
+								<h3 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
+								<p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков… Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
+							</div>
+						</a>
+					</li>
+				</ul>
+				<a href="#0" class="lots__look-more-link">Посмотреть больше</a>
+		</article>
+		
+		<div class="about">
+			<div class="about__column">
+				<div class="about__logo">
+					<img src="./images/logo-white.svg" alt="Оно тебе надо логотип" class="about__logo-image">
+				</div>
+			</div>
+
+			<div class="about__column">
+				<h2 class="about__title">Об аукционе</h2>
+				<div class="about__text_column">
+					<p class="about__text">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
+					<p class="about__text">Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. </p>
+				</div>
+				
+			</div>
+		</div>
+	</main>
+
+	<footer class="footer">
+		<address class="address">
+			<a href="tel:+99995555555" class="header__link">+9 999 555 5555</a>
+			<a href="mailto:info@sobaka.ge" class="header__link">info@sobaka.ge</a>
+			<br>
+			<p>наб. Принсенграхт 263-265, Амстердам</p>
+		</address>
+
+		<nav class="footer__menu">
+			<ul class="footer__menu-list">
+				<li class="footer__menu-list-item">
+					<a href="#0" class="footer__menu-link footer__menu-link_active">главная</a>
+				</li>
+				<li class="footer__menu-list-item">
+					<a href="#0" class="footer__menu-link">посмотреть лоты</a>
+				</li>
+				<li class="footer__menu-list-item">
+					<a href="#0" class="footer__menu-link">об аукционе</a>
+				</li>
+			</ul>
+		</nav>
+
+		<ul class="footer__social-list">
+			<li class="footer__social-list-item">
+				<a href="#0" class="footer__social-link">
+					<img src="./images/icon-1.png" alt="Логотип vk" class="footer__social-icon">
+				</a>
+			</li>
+			<li class="footer__social-list-item">
+				<a href="#0" class="footer__social-link">
+					<img src="./images/icon-2.png" alt="Логотип youtube" class="footer__social-icon">
+				</a>
+			</li>
+			<li class="footer__social-list-item">
+				<a href="#0" class="footer__social-link">
+					<img src="./images/icon-3.png" alt="Логотип pinterest" class="footer__social-icon">
+				</a>
+			</li>
+		</ul>
+	</footer>
+</body>
 </html>
