--- a/index.html
+++ b/index.html
@@ -25,11 +25,9 @@
 			</ul>
 		</nav>
 
-		<div class="header__logo">
-			<a href="#0">
+			<a href="#0" class="header__logo">
 				<img src="./images/logo.svg" alt="Логотип" class="header__logo-image">
 			</a>
-		</div>
 
 		<address class="address header__address">
 			<a href="tel:+99995555555" class="header__link">+9 999 555 5555</a>
@@ -39,7 +37,7 @@
 	</header>
 
 	<main>
-		<div class="cover">
+		<section class="cover">
 			<div class="overlay"></div>
 
 				<h1 class="cover__title">
@@ -52,8 +50,7 @@
 				<h3 class="cover__description-text">Аукцион вещей, в которые никто не верил</h3>
 				<button class="bet-button">Сделать ставку</button>
 			</div>
-
-		</div>
+		</section>
 
 		<article class="lots">
 			<h2 class="lots__heading">Лоты</h2>
@@ -87,11 +84,12 @@
 							</div>
 						</a>
 					</li>
+					
 				</ul>
 				<a href="#0" class="lots__look-more-link">Посмотреть больше</a>
 		</article>
 		
-		<div class="about">
+		<section class="about">
 			<div class="about__column">
 				<div class="about__logo">
 					<img src="./images/logo-white.svg" alt="Оно тебе надо логотип" class="about__logo-image">
@@ -104,9 +102,9 @@
 					<p class="about__text">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
 					<p class="about__text">Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. </p>
 				</div>
-				
+
 			</div>
-		</div>
+		</section>
 	</main>
 
 	<footer class="footer">
