--- a/index.html
+++ b/index.html
@@ -24,11 +24,9 @@
 				</li>
 			</ul>
 		</nav>
-
-			<a href="#0" class="header__logo">
-				<img src="./images/logo.svg" alt="Логотип" class="header__logo-image">
-			</a>
-
+		<a href="#0" class="header__logo">
+			<img src="./images/logo.svg" alt="Логотип" class="header__logo-image">
+		</a>
 		<address class="address header__address">
 			<a href="tel:+99995555555" class="header__link">+9 999 555 5555</a>
 			<a href="mailto:info@sobaka.ge" class="header__link">info@sobaka.ge</a>
@@ -39,20 +37,18 @@
 	<main>
 		<section class="cover">
 			<div class="overlay"></div>
-
 				<h1 class="cover__title">
 					<span class="aligned-text">О<span class="letter-spacing-extended">н<span class="no-letter-spacing">о</span></span></span> 
 					<span class="aligned-text_center">те<span class="letter-spacing-extended">б<span class="no-letter-spacing">е</span></span></span> 
 					<span class="aligned-text_right">н<span class="letter-spacing-extended">ад</span><span class="no-letter-spacing">о</span></span>
 				</h1>
-
 			<div class="cover__description">
-				<h3 class="cover__description-text">Аукцион вещей, в которые никто не верил</h3>
+				<h2 class="cover__description-text">Аукцион вещей, в которые никто не верил</h2>
 				<button class="bet-button">Сделать ставку</button>
 			</div>
 		</section>
 
-		<article class="lots">
+		<section class="lots">
 			<h2 class="lots__heading">Лоты</h2>
 				<ul class="lots__card-list">
 					<li class="lots__card-list-item">
@@ -64,7 +60,6 @@
 							</div>
 						</a>
 					</li>
-
 					<li class="lots__card-list-item">
 						<a href="#0" class="card-link">
 							<div class="card card_type_book">
@@ -74,7 +69,6 @@
 							</div>
 						</a>
 					</li>
-
 					<li class="lots__card-list-item">
 						<a href="#0" class="card-link">
 							<div class="card card_type_picture">
@@ -84,37 +78,32 @@
 							</div>
 						</a>
 					</li>
-					
 				</ul>
 				<a href="#0" class="lots__look-more-link">Посмотреть больше</a>
-		</article>
-		
+		</section>
+
 		<section class="about">
 			<div class="about__column">
 				<div class="about__logo">
 					<img src="./images/logo-white.svg" alt="Оно тебе надо логотип" class="about__logo-image">
 				</div>
 			</div>
-
 			<div class="about__column">
 				<h2 class="about__title">Об аукционе</h2>
 				<div class="about__text_column">
 					<p class="about__text">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
 					<p class="about__text">Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. </p>
 				</div>
-
 			</div>
 		</section>
 	</main>
 
 	<footer class="footer">
 		<address class="address">
-			<a href="tel:+99995555555" class="header__link">+9 999 555 5555</a>
-			<a href="mailto:info@sobaka.ge" class="header__link">info@sobaka.ge</a>
-			<br>
+			<a href="tel:+99995555555" class="footer__link">+9 999 555 5555</a>
+			<a href="mailto:info@sobaka.ge" class="footer__link">info@sobaka.ge</a>
 			<p>наб. Принсенграхт 263-265, Амстердам</p>
 		</address>
-
 		<nav class="footer__menu">
 			<ul class="footer__menu-list">
 				<li class="footer__menu-list-item">
@@ -128,7 +117,6 @@
 				</li>
 			</ul>
 		</nav>
-
 		<ul class="footer__social-list">
 			<li class="footer__social-list-item">
 				<a href="#0" class="footer__social-link">
